--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -22,6 +22,10 @@ run {
 		// Required to run LWJGL3 Java apps on MacOS
 		jvmArgs += "-XstartOnFirstThread"
 	}
+	
+	if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=9099'
+    }
 }
 jar {
 	archiveFileName = "${appName}-${version}.jar"
